# Secure_ANN

./: .gitignore  README.md  build_hnsecw_index.sh  demo.sh  large_demo.sh
2pc/: README.md
2pc/bench/: build_hnsecw_data_file.py  build_npz.py  run_batch_query.sh  run_mpc_layer_search.py  run_multi_query.sh  run_single_query.sh
2pc/mp_spdz/Programs/Source/: hnsecw_search_2pc.mpc  hnsecw_search_2pc_batch.mpc  hnsecw_search_2pc_multi.mpc
2pc/mp_spdz/bench/: gen_inputs.py  run_search_2pc.sh
2pc/src/hnsecw/: CMakeLists.txt  hnsecw_batch_b2y.cpp  hnsecw_batch_b2y.h  hnsecw_cli.cpp  hnsecw_multi_b2y_dyn.cpp  hnsecw_multi_b2y_dyn.h  hnsecw_reshuffle_2pc.cpp  hnsecw_single_b2a.cpp  hnsecw_single_b2a.h  hnsecw_single_b2y.cpp  hnsecw_single_b2y.h
3pc/: README.md
3pc/aby3/: README.md  pack_queries_aby3.py
3pc/aby3/bench/: build_cfg_aby3.py  run_search_aby3.sh
3pc/aby3/src/: hnsecw_search_aby3.cpp
3pc/mp_spdz/: README.md  gen_config.py  gen_inputs.py  gen_reshuffle_inputs.py  parse_reshuffle_outputs.py  parse_search_outputs.py
3pc/mp_spdz/Programs/Source/: bench_hnsecw_3pc.mpc  hnsecw_search_3pc.mpc  hnsecw_search_3pc_batch.mpc  hnsecw_search_3pc_multi.mpc  hnsw_layer_search.mpc  hnsw_reshuffle.mpc  hnsw_search.mpc  panther_ivf_doram.mpc
3pc/mp_spdz/bench/: build_cosine_npz.py  gen_mpspdz_inputs.py  gen_panther_ivf_inputs.py  run_search_3pc.sh  verify_panther_ivf.py
baselines/panther_generalize/: README.md  check_ppd.py  demo.sh  gen_final_report_v2.py  microbench_dim_scale.py  microbench_lookup.py  panther_estimator.py  parse_oram_bench.py  plot_panther_exact_topk.py  run_lookup_test.sh  run_one_mmul_pipe_lan.sh  run_oram_bench.sh  run_panther_sort_grid_tc.sh  run_panther_ssip_grid_tc.sh  run_panther_topk_grid_tc.sh  run_panther_visited_grid_tc.sh  throttle_ns.sh
baselines/panther_generalize/OpenPanther/experimental/panther/: BUILD.bazel  BUILD_high_dim_append.txt  throttle.sh
baselines/panther_generalize/OpenPanther/experimental/panther/benchmark/: distance_benchmark.cc  gc_sorter.cc  microbench_upgrade.cc  mixed_topk_benchmark.cc  mmul_topk_pipeline_benchmark.cc  panther_plain.cc  random_panther_client.cc  random_panther_client.h  random_panther_client_10M.cc  random_panther_doram.cc  random_panther_server.cc  random_panther_server.h  random_panther_server_10M.cc  ss_ip_benchmark.cc
baselines/panther_generalize/OpenPanther/experimental/panther/protocol/: batch_min.cc  batch_min.h  batch_min_test.cc  bitwidth_adjust.cc  bitwidth_adjust.h  bitwidth_adjust_test.cc  common.cc  common.h  common_test.cc  dist_cmp.cc  dist_cmp.h  dist_cmp_ss_test.cc  dist_cmp_test.cc  gc_topk.cc  gc_topk.h  gc_topk_test.cc  gc_visited_test.cc
baselines/panther_generalize/OpenPanther/experimental/panther/protocol/customize_pir/: BUILD.bazel  seal_mpir.cc  seal_mpir.h  seal_mpir_test.cc  seal_pir.cc  seal_pir.h  seal_pir_test.cc  seal_pir_utils.cc  seal_pir_utils.h
baselines/panther_generalize/Programs/Source/: oram_bench.mpc
baselines/panther_generalize/patches/: random_panther_doram_substitution.patch
baselines/sort_3pc/: README.md  gen_sort_config.py  gen_sort_inputs.py  parse_sort_outputs.py  verify_sort_3pc.py
baselines/sort_3pc/Programs/Source/: sort_3pc.mpc
baselines/sort_3pc/bench/: run_sort_3pc.sh
patches/: README.md  aby_arith_reset_clear_mvC.patch
rag/: README.md  build_hotpot_subset.py  embed_e5.py  embed_hotpot.py  eval_answers.py  eval_oracle_aic.py  generate_answers.py  prepare_msmarco_corpus.py  retrieve_hnsw.py  run_rag_eval.sh
scripts/: build_aby3.sh  download_demo_dataset.sh  ef_calibration_v3.py  ef_calibration_v3_cosine.py  ef_calibration_v3_l2.py  fixed_t_plaintext_baseline.py  m_ef_tradeoff_figure.py  redraw_ef_calibration.py  run_multi_via_single.sh  run_real_queries.sh  sync_aby3_examples.sh  sync_aby_examples.sh
scripts/phase4/: build_table3_full.py
tools/: pack_hnsw_shares.py
